--- a/static/index.html
+++ b/static/index.html
@@ -13,5 +13,7 @@
 </head>
 <body>
 <p><a href="./git_note.html">git note</a></p>
+<p><a href="./server_note.html">server note</a></p>
+<p><a href="./log_10_28.html">10/28日誌</a></p>
 </body>
 </html>
