--- a/static/git_note.html
+++ b/static/git_note.html
@@ -55,6 +55,7 @@ github 修改
 <pre><code>git rm -rf --cache .
 git add .
 git commit -m ....
+git push
 </code></pre>
 <p><img alt="" src="img/git-workflow.jpeg" /></p>
 </body>
