--- a/static/log_10_28.html
+++ b/static/log_10_28.html
@@ -16,6 +16,7 @@
 <p>bash to visit each file in folder</p>
 <p>為甚麼翻譯成html 因為伺服器回答使用者的URL的時候,回傳的就是html格式</p>
 <h2 id="html-note">html note</h2>
+<p>hyper text markup language (簡稱HTML) 這是一個電腦語言,但不是程式語言。和markdown 一樣,也是電腦語言,不是程式語言。因為都沒有迴圈(loop)</p>
 <p>有配對標籤 和單標籤</p>
 <ul>
 <li>配對標籤 <code>&lt;標籤名稱&gt; ddfdfdf dfdfd &lt;/標籤名稱&gt;</code></li>
@@ -61,6 +62,19 @@
   ```js
 <br />
 <script type="typescript">寫typescript的程式碼</script></p>
-<p>```</p>
+<p><code>- `&lt;ul&gt;&lt;/ul&gt;`無號碼清單(unordered list)</code>html
+    <ul>
+     <li> </li>
+     <li> </li>
+    </ur>
+    <code>- 有號清單</code>html
+        <ol>
+        <li>清單項目 </li>
+        <li>清單項目
+        &lt;/ol
+    <code>- &lt;code&gt;&lt;/code&gt;  不換行 但是用等寬的字型顯示。
+- 上面的code 通常會和 pre標籤配合,如下:</code>html
+    <pre><code></code></pre> 
+   ```    </p>
 </body>
 </html>
